# breadcrumbs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  crumb-kit-agentic-review-2026-06-26.md.txt  crumb.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
breadcrumbs/: __init__.py  __main__.py  cli.py  mcp_core.py  mcp_server.py
breadcrumbs/templates/project-memory/: README.md  current.md  handoff.md  known-traps.md  manifest.yml  open-questions.md
breadcrumbs/templates/project-memory/evidence/: refs.yml
breadcrumbs/templates/project-memory/index/: README.md
breadcrumbs/templates/project-memory/private/: README.md
docs/: architecture.md  cli-spec.md  crumb-kit-agentic-review-2026-06-27.md  crumb-kit-system-review-2026-07-01.md  mcp-spec.md  record-schema.md  security.md
fixtures/: README.md
fixtures/fixture-01-fresh-resume/.project-memory/: current.md  handoff.md  known-traps.md  manifest.yml  open-questions.md
fixtures/fixture-01-fresh-resume/.project-memory/attempts/: 2026-05-12-sqlite-store-too-heavy.md
fixtures/fixture-01-fresh-resume/.project-memory/decisions/: 2026-05-10-markdown-source-of-truth.md
fixtures/fixture-01-fresh-resume/.project-memory/sessions/: 2026-05-20-phase-3-wrapup.md
fixtures/fixture-02-guard-true-positive/.project-memory/: current.md  handoff.md
fixtures/fixture-02-guard-true-positive/.project-memory/attempts/: 2026-06-12-auth-middleware-rewrite.md
fixtures/fixture-03-guard-false-positive/.project-memory/: current.md  handoff.md  open-questions.md
fixtures/fixture-04-stale-handoff/.project-memory/: current.md  handoff.md  known-traps.md
fixtures/fixture-05-superseded-decision/.project-memory/: current.md  handoff.md
fixtures/fixture-06-secret-leak/.project-memory/: current.md  handoff.md  manifest.yml
fixtures/fixture-07-poisoned-text/.project-memory/: current.md  handoff.md  known-traps.md
fixtures/fixture-08-packet-stale/.project-memory/: current.md  handoff.md
fixtures/fixture-09-cloud-fallback/.project-memory/: current.md  handoff.md
fixtures/fixture-10-many-sessions/.project-memory/: current.md  handoff.md
tests/: test_audit.py  test_bugfixes.py  test_capture.py  test_doctor.py  test_fixtures.py  test_guard.py  test_hooks.py  test_identity.py  test_init.py  test_integrations.py  test_mcp.py  test_note.py  test_parser.py  test_remember.py  test_resume.py  test_schema.py  test_search.py  test_secrets.py  test_validate.py  test_verify.py
tests/data/decisions/: 2026-06-25-bad-status.md  2026-06-25-good-decision.md  2026-06-25-id-mismatch.md  2026-06-25-local-private.md  2026-06-25-malformed.md  2026-06-25-missing-evidence.md  2026-06-25-secret-prohibited.md  2026-06-25-superseded-no-by.md
tests/data/sessions/: 2026-06-25-good-session.md  2026-06-25-no-next-action.md
(+111 files in other folders)
